--- a/index.html
+++ b/index.html
@@ -216,10 +216,10 @@
 									<!-- Details next to profile image -->
 									<div class="col-sm-6 col-md-7">
 									  <div class="about-info">
-										<p><span class="title-s">Name: </span> <span>Deep Rabadiya</span></p>
-										<p><span class="title-s">Job Role: </span> <span>Agriculture Analyst</span></p>
-										<p><span class="title-s">Experience: </span> <span>Fresher</span></p>
-										<p><span class="title-s">Address: </span> <span>Gujarat, India</span></p>
+										<p><span class="title-s"><b> Name: </b> </span> <span>Deep Rabadiya</span></p>
+										<p><span class="title-s"><b>Job Role: </b></span> <span>Remote Sensing and GIS Analyst, Data Analyst </span></p>
+										<p><span class="title-s"><b>Experience: </b></span> <span> Remote Sensing and GIS Analyst <br> [Semantic Technologies and Agritech Services Pvt Ltd <br> Pune, Maharashtra] <br> [3 months]</span></p>
+										<p><span class="title-s"><b>Address: </b></span> <span>Gujarat, India</span></p>
 									  </div>
 									</div>
 								  </div>
@@ -274,7 +274,7 @@
 									<li class="d-flex"><span>Domain:</span> <span>Agriculture</span></li>
 									<li class="d-flex"><span>Education:</span> <span>Masters in Agriculture Analytics</span></li>
 									<li class="d-flex"><span>Language:</span> <span>English, Hindi, Gujarati</span></li>
-									<li class="d-flex"><span>Other Skills:</span> <span>Python, Machine Learning, Google Earth Engine, Erdas Imagine, ArcGIS, QGIS, Envi, SQL &amp; Libraries (gdal,Rasterio,geopandas,openCV,Pandas,Numpy,Matplotlib) </span></li>
+									<li class="d-flex"><span>Other Skills:</span> <span>Python, Machine Learning, Google Earth Engine, Erdas Imagine, ArcGIS, QGIS, SNAP, Envi, SQL &amp; Libraries (gdal,Rasterio,geopandas,openCV,Pandas,Numpy,Matplotlib) </span></li>
 									<li class="d-flex"><span>Interest:</span> <span>Playing kho-kho, Traveling</span></li>
 									
 								</ul>
@@ -285,7 +285,7 @@
 						<div class="counter-wrap ftco-animate d-flex mt-md-3">
 							<div class="text">
 								<p class="mb-4">
-									<span class="number" data-number="6">0</span> <span>+</span>
+									<span class="number" data-number="10">0</span> <span>+</span>
 									<span>&nbsp; Projects completed</span>
 								</p>
 								<p><a href="https://www.linkedin.com/in/deep-rabadiya-998816215" class="btn btn-primary py-3 px-3">LinkedIn</a></p>
@@ -458,6 +458,17 @@
 				</div>
 			  </div>
 			</div>
+			<div class="col-md-4 d-flex ftco-animate">
+				<div class="blog-entry justify-content-end">
+				<a href="https://github.com/DEEPRABADIYA/Web-Mapping-Of-Ramsar-Sites-of-India" class="block-20 zoom-effect" style="background-image: url('images/proj_5.jpg');">
+				</a>
+				<div class="text mt-3 float-right d-block">
+  
+				  <h3 class="heading"><a href="https://github.com/DEEPRABADIYA/Web-Mapping-Of-Ramsar-Sites-of-India">Web GIS</a></h3>
+				  <p>Web Mapping Of Ramsar Sites of India</p>
+				</div>
+			  </div>
+			</div>
 		 </div>
 	  </div>
     </section>
@@ -468,7 +479,7 @@
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text">
-                <strong class="number" data-number="5">0</strong>
+                <strong class="number" data-number="6">0</strong> <span>+</span>
                 <span>Certifications</span>
               </div>
             </div>
@@ -476,41 +487,42 @@
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text">
-                <strong class="number" data-number="8">0</strong>
+                <strong class="number" data-number="12">0</strong> <span>+</span>
                 <span>Projects</span>
               </div>
             </div>
           </div>
-          <!-- <div class="col-md d-flex justify-content-center counter-wrap ftco-animate"> -->
-            <!-- <div class="block-18">
-              <div class="text">
-                <strong class="number" data-number="1000">0</strong>
-                <span>Mentored Students</span>
-              </div>
-            </div>
-          </div>
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
-            <div class="block-18">
+            <div class="block-18"> 
               <div class="text">
-                <strong class="number" data-number="500">0</strong>
-                <span>Cups of coffee</span>
+                <strong class="number" data-number="3">0</strong> <span>Months</span>
+                <span>Experience</span>
               </div>
             </div>
           </div>
-        </div>
-      </div> -->
+           <!-- <div class="col-md d-flex justify-content-center counter-wrap ftco-animate"> --> 
+            <!-- <div class="block-18"> -->
+              <!-- <div class="text"> -->
+                <!-- <strong class="number" data-number="500">0</strong> -->
+                <!-- <span>Cups of coffee</span> -->
+              <!-- </div> -->
+            <!-- </div> -->
+          <!-- </div> -->
+        <!-- </div> -->
+      </div> 
 	
-	  <div class="ftco-section ftco-hireme img margin-top" style="background-image: url(images/bg_1.jpg)">
-			<div class="container"> -->
-				<div class="row justify-content-center">
-					<div class="col-md-7 ftco-animate text-center">
-						<h2>More projects on<span> Github  </span> </h2>
+	
+	  <!-- <div class="ftco-section ftco-hireme img margin-top" style="background-image: url(images/bg_1.jpg)"> -->
+			<!-- <div class="container"> --> 
+				<!-- <div class="row justify-content-center"> -->
+					<!-- <div class="col-md-7 ftco-animate text-center"> -->
+						<!-- <h2>More projects on<span> Github  </span> </h2> -->
 						<!-- <div class="heading"> <h4> I love to solve business problems &amp; uncover hidden data stories </h4> -->
-						<br>
-						<p><a href="https://github.com/DEEPRABADIYA" class="btn btn-primary py-3 px-5">GitHub</a></p>
-						</div>
-					</div>
-				</div>
+						<!-- <br> -->
+						<!-- <p><a href="https://github.com/DEEPRABADIYA" class="btn btn-primary py-3 px-5">GitHub</a></p> -->
+						<!-- </div> -->
+					<!-- </div> -->
+				<!-- </div> -->
 			<!-- </div> -->
 		</div>
 	</section>
