--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="Resume\Deep_cv_new.pdf">resumelink</a></p>
+	            <p><a href="Resume\Deep_Resume.pdf">resumelink</a></p>
 	          </div>
           </div>
 
