--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
           <div class="col-md-10 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Resume</h1>
             <h2 class="mb-4">Resume</h2>
-            <p><a href="Resume\Deep_cv_new.pdf" class="btn btn-primary py-3 px-3">Resume</a></p>
+            <p><a href="Resume\Deep_Resume.pdf" class="btn btn-primary py-3 px-3">Resume</a></p>
           </div>
         </div>
 
