--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 											aria-valuemax="100"></div>
 									</div>
 									
-									<span>Machine Learning and Deep Learning</span> <span class="pull-right">80%</span>
+									<span>Machine Learning</span> <span class="pull-right">80%</span>
 									<div class="progress">
 										<div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0"
 											aria-valuemax="100"></div>
@@ -379,12 +379,12 @@
 				</div>
     		</div>
 
-    		<div class="row justify-content-center mt-5">
+    		<!-- <div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
     				<p><a href="#" class="btn btn-primary py-4 px-5">Download Resume</a></p>
     			</div>
     		</div>
-    	</div>
+    	</div> -->
     </section>
 
    
