--- a/index.html
+++ b/index.html
@@ -274,7 +274,8 @@
 									<li class="d-flex"><span>Domain:</span> <span>Agriculture</span></li>
 									<li class="d-flex"><span>Education:</span> <span>Masters in Agriculture Analytics</span></li>
 									<li class="d-flex"><span>Language:</span> <span>English, Hindi, Gujarati</span></li>
-									<li class="d-flex"><span>Other Skills:</span> <span>Python, Machine Learning, Google Earth Engine, Erdas Imagine, ArcGIS, QGIS, SNAP, Envi, SQL &amp; Libraries (gdal,Rasterio, <br> geopandas,openCV,Pandas,Numpy,Matplotlib) </span></li>
+									<li class="d-flex"><span>Other Skills:</span> <span>Python, Machine Learning, Google Earth Engine, Erdas Imagine, ArcGIS, QGIS, SNAP, Envi, SQL etc.</span></li>
+									<li class="d-flex"><span>Libraries:</span> <span> gdal,Rasterio,geopandas,openCV,Pandas,Numpy,Matplotlib etc. </span></li>
 									<li class="d-flex"><span>Interest:</span> <span>Playing kho-kho, Traveling</span></li>
 									
 								</ul>
