--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
 						// Create an array of typing text
 						const typingTexts = [
-						'Agriculture Analyst  '
+						'Agriculture Analyst'
 						];
 
 						// Create a function to display the typing animation for a given text
@@ -185,7 +185,7 @@
 
 						<br>
 						<br>
-			            <h2>A GIS and Remote Sensing Analyst</h2>
+			            <h2>A Geospatial Data Scientist</h2>
 						<!-- <h2 class="d-flex" style="margin-bottom: 0">With over 5 years of experience</h2> -->
 						<!-- <br> -->
 			            <p><a href="https://github.com/DEEPRABADIYA?tab=repositories" class="btn btn-primary py-3 px-3">My works</a></p>
@@ -217,7 +217,7 @@
 									<div class="col-sm-6 col-md-7">
 									  <div class="about-info">
 										<p><span class="title-s"><b> Name: </b> </span> <span>Deep Rabadiya</span></p>
-										<p><span class="title-s"><b>Job Role: </b></span> <span>Remote Sensing and GIS Analyst, Data Analyst </span></p>
+										<p><span class="title-s"><b>Job Role: </b></span> <span> Geospatial Data Scientist, Remote Sensing and GIS Analyst, Data Analyst </span></p>
 										<p><span class="title-s"><b>Experience: </b></span> <span> Remote Sensing and GIS Analyst <br> [Semantic Technologies and Agritech Services Pvt Ltd <br> Pune, Maharashtra] <br> [3 months]</span></p>
 										<p><span class="title-s"><b>Address: </b></span> <span>Gujarat, India</span></p>
 									  </div>
