--- a/index.html
+++ b/index.html
@@ -218,7 +218,18 @@
 									  <div class="about-info">
 										<p><span class="title-s"><b> Name: </b> </span> <span>Deep Rabadiya</span></p>
 										<p><span class="title-s"><b>Job Role: </b></span> <span> Geospatial Data Scientist, Remote Sensing and GIS Analyst, Data Analyst </span></p>
-										<p><span class="title-s"><b>Experience: </b></span> <span> Remote Sensing and GIS Analyst <br> [Semantic Technologies and Agritech Services Pvt Ltd <br> Pune, Maharashtra] <br> [3 months]</span></p>
+										<p><span class="title-s"><b>Experience: </b></span></p>
+                                                                                 <ul>
+                                                                                    <li><b>Assistant RS and GIS Manager</b> <br>
+                                                                                        <span>SBI General Insurance</span> <br>
+                                                                                        <span>January 2025 – Present</span>
+                                                                                    </li>
+                                                                                    <li><b>Remote Sensing and GIS Analyst</b> <br>
+                                                                                        <span>Semantic Technologies and Agritech Services Pvt Ltd</span> <br>
+                                                                                        <span>Pune, Maharashtra</span> <br>
+                                                                                        <span>May 2024 - July 2024</span>
+                                                                                    </li>
+                                                                                   </ul>
 										<p><span class="title-s"><b>Address: </b></span> <span>Gujarat, India</span></p>
 									  </div>
 									</div>
@@ -250,7 +261,7 @@
 											aria-valuemax="100"></div>
 									</div>
 									
-									<span>Machine Learning</span> <span class="pull-right">80%</span>
+									<span>Machine Learning and Deep Learning</span> <span class="pull-right">80%</span>
 									<div class="progress">
 										<div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0"
 											aria-valuemax="100"></div>
@@ -270,7 +281,7 @@
 								<p>
 									As a passionate Agriculture Analyst, I bring a fresh perspective and a strong foundation in Python, Machine Learning, and Google Earth Engine. Proficient in utilizing various GIS software(Erdas,ArcGIS,QGIS,ENVI etc.) and libraries(Rasterio,gdal,geopandas etc.), I am committed to leveraging technology to optimize agricultural processes and drive sustainable solutions in the industry.</p>
 								<ul class="about-info mt-4 px-md-0 px-2">
-									<li class="d-flex"><span>Profile:</span> <span>GIS &amp; Remote Sensing</span></li>
+									<li class="d-flex"><span>Profile:</span> <span>Geospatial Data Science(RS and GIS)</span></li>
 									<li class="d-flex"><span>Domain:</span> <span>Agriculture</span></li>
 									<li class="d-flex"><span>Education:</span> <span>Masters in Agriculture Analytics</span></li>
 									<li class="d-flex"><span>Language:</span> <span>English, Hindi, Gujarati</span></li>
