--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18"> 
               <div class="text">
-                <strong class="number" data-number="3">0</strong> <span>Months</span>
+                <strong class="number" data-number="6+">0</strong> <span>Months</span>
                 <span>Experience</span>
               </div>
             </div>
